--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,16 @@
         <exec.mainClass>com.mycompany.mavenproject2.Mavenproject2</exec.mainClass>
     </properties>
     <name>java-project</name>
+    <dependencies>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE210</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.32</version>
+        </dependency>
+    </dependencies>
 </project>
